// swift-tools-version: 5.10
import PackageDescription

let package = Package(
    name: "LifeMeter",
    platforms: [
        .iOS(.v15),
        .watchOS(.v8),
        .macOS(.v12),
    ],
    products: [
...
